--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         </div>
         <div class="Rdiv">
-                    image<img src="">
+                    <img src="https://i.ibb.co/XX50bvF/shubham.jpg">
         </div>
         </div>
         <div class="mainfooter">
