--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
     <div class=" maincontainer">
@@ -23,13 +27,13 @@
     <div class="rheader">
         <!--  nav bar rightyour socialmedia -->
           <div class="ricon">
-            1
+            <i class="ri-twitter-fill"></i>
           </div>
           <div class="ricon">
-            2
+            <i class="ri-instagram-line"></i>
           </div>
           <div class="ricon">
-            3
+            <i class="ri-github-fill"></i>
           </div>
     </div>
 </div>
@@ -65,10 +69,13 @@
                 <p> worked with</p>
             </div>
             <div class="downbutton">
-               <div class="innerbox">ClickUp</div>
-               <div class="innerbox">Dropbox</div>
+               <div class="innerbox"> <img src="https://i.ibb.co/b5HLSDy/clickupimg-removebg-preview.png" alt="">
+               <div class="image"> ClickUp</div></div>
+               <div class="innerbox"><img src="https://i.ibb.co/k8WgGzj/dropboximg-removebg-preview.png" alt="">
+                <div class="image">Dropbox</div></div>
                <div class="innerbox">PAYCHEK</div>
-               <div class="innerbox">elastic</div>
+               <div class="innerbox">
+                <img src="https://i.ibb.co/gwtzZLt/elacticimg-removebg-preview.png" alt=""> <div class="image">elastic</div></div>
                <div class="innerbox">stripe</div>
             </div>
                    
